# FinalProject

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake  README.md
include/: Block.h  CollisionSolving.h  Color.h  Constants.h  Point.h  Quadtree.h  Rect.h  Screen.h  Segment.h  Triangle.h  Vect2.h  replit.h  shaders.h
replit/: CMakeLists.txt  gitignore  prepare.sh
shaders/: fragment.glsl  vertex.glsl
src/: Block.cpp  CollisionSolving.cpp  Color.cpp  Point.cpp  Quadtree.cpp  README.md  Screen.cpp  Segment.cpp  Triangle.cpp  Vect2.cpp  main.cpp  shaders.cpp
src/tests/: CollisionSolving.cpp
